syntax = "proto3";
package kira.gov;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "kira/gov/role.proto";
import "kira/gov/permission.proto";
import "kira/gov/network_properties.proto";

option go_package = "github.com/KiraCore/sekai/x/gov/types";

enum PollVoteOption {
  option (gogoproto.goproto_enum_prefix) = false;

  // VOTE_OPTION_UNSPECIFIED defines a no-op vote option.
  POLL_VOTE_OPTION_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "PollOptionEmpty"];
  // VOTE_OPTION_ABSTAIN defines an abstain vote option.
  POLL_VOTE_OPTION_ABSTAIN = 1 [(gogoproto.enumvalue_customname) = "PollOptionAbstain"];
  // VOTE_OPTION_NO defines a no vote option.
  POLL_VOTE_OPTION_CUSTOM = 2 [(gogoproto.enumvalue_customname) = "PollOptionCustom"];
  // VOTE_OPTION_NO_WITH_VETO defines a no with veto vote option.
  POLL_VOTE_OPTION_NO_WITH_VETO = 3 [(gogoproto.enumvalue_customname) = "PollOptionNoWithVeto"];
}

enum PollResult {
  option (gogoproto.goproto_enum_prefix) = false;

  POLL_RESULT_UNKNOWN = 0 [(gogoproto.enumvalue_customname) = "PollUnknown"];
  POLL_RESULT_PASSED = 1 [(gogoproto.enumvalue_customname) = "PollPassed"];
  POLL_RESULT_REJECTED = 2 [(gogoproto.enumvalue_customname) = "PollRejected"];
  POLL_RESULT_REJECTED_WITH_VETO = 3 [(gogoproto.enumvalue_customname) = "PollRejectedWithVeto"];
  POLL_PENDING = 4 [(gogoproto.enumvalue_customname) = "PollPending"];
  POLL_RESULT_QUORUM_NOT_REACHED = 5 [(gogoproto.enumvalue_customname) = "PollQuorumNotReached"];
}

message PollVote {
  uint64 poll_id = 1;

  bytes voter = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  PollVoteOption option = 3;
  string custom_value = 5;
}

message PollOptions {
  repeated string values = 1;
  uint64 count = 2;
  string type = 3;
  uint64 choices = 4;
}

message AddressPolls {
  bytes address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"address\""
  ];

  repeated uint64 ids = 2;
}

message Poll {
  option (gogoproto.goproto_getters) = false;
  uint64 poll_id = 1;

  bytes creator = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  string title = 3;
  string description = 4;
  string reference = 5;
  string checksum = 6;
  repeated uint64 roles = 7;
  PollOptions options = 8;

  google.protobuf.Timestamp voting_end_time = 9
  [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"voting_end_time\""];

  PollResult result = 10;
}

message MsgPollVote {
  uint64 poll_id = 1;

  bytes voter = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  PollVoteOption option = 3;
  string value = 4;
}

message MsgPollCreate {
  option (gogoproto.goproto_getters) = false;

  bytes creator = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  string title = 2;
  string description = 3;
  string reference = 4;
  string checksum = 5;
  repeated string roles = 6;
  repeated string poll_values = 7;
  uint64 value_count = 8;
  string value_type = 9;
  uint64 possible_choices = 10;
  string duration = 11;
}
